[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/pause.gd" type="Script" id=1]
[ext_resource path="res://HelvetiPixel.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.47451 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
anchor_left = 0.428
anchor_top = 0.367
anchor_right = 0.571
anchor_bottom = 0.421
margin_left = -0.878967
margin_top = 0.521088
margin_right = -1.43896
margin_bottom = 0.20108
custom_fonts/font = SubResource( 1 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
anchor_left = 0.477
anchor_top = 0.659
anchor_right = 0.523
anchor_bottom = 0.713
margin_left = 0.659973
margin_top = 0.279968
margin_right = -0.660034
margin_bottom = -0.0400391
custom_fonts/font = SubResource( 2 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.439
anchor_top = 0.437
anchor_right = 0.561
anchor_bottom = 0.491
margin_left = 0.119995
margin_top = 0.039978
margin_right = -0.120117
margin_bottom = -0.280029
custom_fonts/font = SubResource( 3 )
text = "Main menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="continue" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_mainmenu_pressed"]
